# cpm-cppm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  main.cpp
doc/: npm-example  usage-install  usage-start
include/: CommandLine.hpp  Debug.hpp  Dir.hpp  OpenFile.hpp  PM.hpp  Regex.hpp  Replace.hpp  Usage.hpp
include/cpm-include/: CPM.hpp
include/cppm-include/: CPPM.hpp
lib/cpm/install/explode/include/: explode.h
lib/cpm/install/explode/src/: explode.c
lib/cpm/install/openreadfile/include/: open_read_file.h
lib/cpm/install/openreadfile/src/: open_read_file.c
lib/cpm/start/: Makefile
lib/cpm/start/include/: $name.h
lib/cpm/start/src/: $name.c
lib/cppm/install/explode/include/: Explode.hpp
lib/cppm/install/explode/src/: Explode.cpp
lib/cppm/install/openfile/include/: OpenFile.hpp
lib/cppm/install/openfile/src/: OpenFile.cpp
lib/cppm/start/: Makefile  main.c  main.cpp
lib/cppm/start/include/: $Name.hpp
lib/cppm/start/src/: $Name.cpp
src/: CommandLine.cpp  Dir.cpp  OpenFile.cpp  PM.cpp  Regex.cpp  Replace.cpp
src/cpm-src/: CPM.cpp
src/cppm-src/: CPPM.cpp
